--- a/code/beehive-dashboard/src/Styles/Navbar.scss
+++ b/code/beehive-dashboard/src/Styles/Navbar.scss
@@ -8,6 +8,16 @@
     display: flex;
     flex-direction: row;
   }
+  .navbar::before {
+    content: "";
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    bottom: 0;
+    height: 0.5px;
+    background-color: rgb(255, 255, 255);
+  }
+  
   .navbar .leftSide {
     flex: 50%;
     height: 100%;
