--- a/code/beehive-dashboard/src/Styles/Landing.scss
+++ b/code/beehive-dashboard/src/Styles/Landing.scss
@@ -41,3 +41,26 @@ body {
     background-color: rgba(255, 255, 255, 0.189);
     z-index: 0;
   }
+  
+  .content-container {
+    position: absolute;
+    top: 45%;
+    left: 28%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    color: white;
+    text-align: left;
+    padding: 20px;
+  }
+  
+  .content-container p {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    max-width: 600px;
+  }
+  .content-container h3 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 40px;
+    margin: 0 0 50px;
+  }
+  
