--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -269,11 +269,80 @@ body.dark-theme{
     right: 0;
   }
 
+  /* HOME */
+.home{
+    padding: 3.5rem 0 2rem;
+  }
+  
+  .home__container{
+    position: relative;
+    row-gap: 2rem;
+  }
+  
+  .home__img{
+    width: 200px;
+    justify-self: center;
+  }
+  
+  .home__title{
+    font-size: var(--big-font-size);
+    line-height: 140%;
+    margin-bottom: var(--mb-1);
+  }
+  
+  .home__description{
+    margin-bottom: var(--mb-2-5);
+  }
+
+  /* BUTTONS */
+.button{
+    display: inline-block;
+    background-color: var(--first-color);
+    color: #FFF;
+    padding: 1rem 1.75rem;
+    border-radius: .5rem;
+    font-weight: var(--font-medium);
+    transition: .3s;
+  }
+  
+  .button:hover{
+    background-color: var(--first-color-alt);
+  }
+  
+  .button__icon{
+    transition: .3s;
+  }
+  
+  .button:hover .button__icon{
+    transform: translateX(.25rem);
+  }
+  
+  .button--flex{
+    display: inline-flex;
+    align-items: center;
+    column-gap: .5rem;
+  }
+  
+  .button--link{
+    color: var(--first-color);
+    font-weight: var(--font-medium);
+  }
+  
+  .button--link:hover .button__icon{
+    transform: translateX(.25rem);
+  }
+
   /* For small devices */
 @media screen and (max-width: 320px){
     .container{
       margin-left: var(--mb-1);
       margin-right: var(--mb-1);
+    }
+    .home__img{
+    width: 180px;
+    }
+    .home__title{
+    font-size: var(--h1-font-size);
     }
 }
 
@@ -297,6 +366,22 @@ body.dark-theme{
     .nav__menu{
       margin-left: auto;
     }
+
+    .home__container,
+  .about__container{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  .home{
+    padding: 10rem 0 5rem;
+  }
+  .home__container{
+    align-items: center;
+  }
+  .home__img{
+    width: 280px;
+    order: 1;
+  }
   }
 
   /* For large devices */
@@ -312,5 +397,15 @@ body.dark-theme{
     .section__title,
     .section__title-center{
       font-size: var(--h1-font-size);
+    }
+
+    .home{
+    padding: 13rem 0 5rem;
+    }
+    .home__img{
+    width: 350px;
+    }
+    .home__description{
+    padding-right: 7rem;
     }
   }
