Add about section

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -332,6 +332,42 @@ body.dark-theme{
     transform: translateX(.25rem);
   }
 
+/* ABOUT */
+.about__container{
+    row-gap: 2rem;
+  }
+  
+  .about__img{
+    width: 280px;
+    justify-self: center;
+  }
+  
+  .about__title{
+    margin-bottom: var(--mb-1);
+  }
+  
+  .about__description{
+    margin-bottom: var(--mb-2);
+  }
+  
+  .about__details{
+    display: grid;
+    row-gap: 1rem;
+    margin-bottom: var(--mb-2-5);
+  }
+  
+  .about__details-description{
+    display: inline-flex;
+    column-gap: .5rem;
+    font-size: var(--small-font-size);
+  }
+  
+  .about__details-icon{
+    font-size: 1rem;
+    color: var(--first-color);
+    margin-top: .15rem;
+  }
+
   /* For small devices */
 @media screen and (max-width: 320px){
     .container{
@@ -382,7 +418,7 @@ body.dark-theme{
     width: 280px;
     order: 1;
   }
-  }
+}
 
   /* For large devices */
   @media screen and (min-width: 992px){
@@ -407,5 +443,15 @@ body.dark-theme{
     }
     .home__description{
     padding-right: 7rem;
+    }
+
+    .about__img{
+    width: 380px;
+    }
+  }
+
+  @media screen and (min-width: 1200px){
+    .about__container{
+      column-gap: 7rem;
     }
   }
