--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -436,6 +436,35 @@ body.dark-theme{
   margin: 5rem 0 1rem;
 }
 
+/* SCROLL UP */
+.scrollup{
+  position: fixed;
+  background-color: var(--first-color);
+  right: 1rem;
+  bottom: -30%;
+  display: inline-flex;
+  padding: .5rem;
+  border-radius: .25rem;
+  z-index: var(--z-tooltip);
+  opacity: .8;
+  transition: .4s;
+}
+
+.scrollup__icon{
+  font-size: 1rem;
+  color: #FFF;
+}
+
+.scrollup:hover{
+  background-color: var(--first-color-alt);
+  opacity: 1;
+}
+
+/* Show Scroll Up*/
+.show-scroll{
+  bottom: 3rem;
+}
+
   /* For small devices */
 @media screen and (max-width: 320px){
     .container{
@@ -529,5 +558,8 @@ body.dark-theme{
   @media screen and (min-width: 1200px){
     .about__container{
       column-gap: 7rem;
+    }
+    .scrollup{
+      right: 3rem;
     }
   }
