Update active links

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -269,6 +269,22 @@ body.dark-theme{
     right: 0;
   }
 
+/* Active link */
+.active-link{
+  position: relative;
+  color: var(--first-color);
+}
+
+.active-link::after{
+  content: '';
+  position: absolute;
+  bottom: -.5rem;
+  left: 0;
+  width: 50%;
+  height: 2px;
+  background-color: var(--first-color);
+}
+
   /* HOME */
 .home{
     padding: 3.5rem 0 2rem;
