--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -481,42 +481,54 @@ body.dark-theme{
   bottom: 3rem;
 }
 
-  /* For small devices */
+/* For small devices */
 @media screen and (max-width: 320px){
-    .container{
-      margin-left: var(--mb-1);
-      margin-right: var(--mb-1);
-    }
-    .home__img{
-    width: 180px;
-    }
-    .home__title{
-    font-size: var(--h1-font-size);
-    }
+  .container{
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+  .home__img{
+  width: 180px;
+  }
+  .home__title{
+  font-size: var(--h1-font-size);
+  }
+
+  .design_container{
+    grid-template-columns: .6fr;
+    justify-content: center;
+  }
 }
 
-  @media screen and (min-width: 767px){
-    body{
-      margin: 0;
-    }
-  
-    .nav{
-      height: calc(var(--header-height) + 1.5rem);
-      column-gap: 3rem;
-    }
-    .nav__toggle,
-    .nav__close{
-      display: none;
-    }
-    .nav__list{
-      flex-direction: row;
-      column-gap: 3rem;
-    }
-    .nav__menu{
-      margin-left: auto;
-    }
+/* For medium devices */
+@media screen and (min-width: 576px){
+  .design_description{
+    padding: 0 4rem;
+  }
+}
 
-    .home__container,
+@media screen and (min-width: 767px){
+  body{
+    margin: 0;
+  }
+
+  .nav{
+    height: calc(var(--header-height) + 1.5rem);
+    column-gap: 3rem;
+  }
+  .nav__toggle,
+  .nav__close{
+    display: none;
+  }
+  .nav__list{
+    flex-direction: row;
+    column-gap: 3rem;
+  }
+  .nav__menu{
+    margin-left: auto;
+  }
+
+  .home__container,
   .about__container{
     grid-template-columns: repeat(2, 1fr);
   }
@@ -533,49 +545,49 @@ body.dark-theme{
   }
 }
 
-  /* For large devices */
-  @media screen and (min-width: 992px){
-    .container{
-      margin-left: auto;
-      margin-right: auto;
-    }
-  
-    .section{
-      padding: 8rem 0 1rem;
-    }
-    .section__title,
-    .section__title-center{
-      font-size: var(--h1-font-size);
-    }
-
-    .home{
-    padding: 13rem 0 5rem;
-    }
-    .home__img{
-    width: 350px;
-    }
-    .home__description{
-    padding-right: 7rem;
-    }
-
-    .about__img{
-    width: 380px;
-    }
-
-    .design_description{
-      padding: 0 16rem;
-    }
-  
-    .footer__copy{
-      margin: 7rem 0 2rem;
-    }
+/* For large devices */
+@media screen and (min-width: 992px){
+  .container{
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  @media screen and (min-width: 1200px){
-    .about__container{
-      column-gap: 7rem;
-    }
-    .scrollup{
-      right: 3rem;
-    }
+  .section{
+    padding: 8rem 0 1rem;
   }
+  .section__title,
+  .section__title-center{
+    font-size: var(--h1-font-size);
+  }
+
+  .home{
+  padding: 13rem 0 5rem;
+  }
+  .home__img{
+  width: 350px;
+  }
+  .home__description{
+  padding-right: 7rem;
+  }
+
+  .about__img{
+  width: 380px;
+  }
+
+  .design_description{
+    padding: 0 16rem;
+  }
+
+  .footer__copy{
+    margin: 7rem 0 2rem;
+  }
+}
+
+@media screen and (min-width: 1200px){
+  .about__container{
+    column-gap: 7rem;
+  }
+  .scrollup{
+    right: 3rem;
+  }
+}
