--- a/code/beehive-dashboard/src/Styles/Pages/Landing.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Landing.scss
@@ -72,4 +72,20 @@ body {
     font-size: 40px;
     margin: 0 0 50px;
   }
+
+  .hexagon-design {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    z-index: -1;
+  }
   
+  .hexagon-design img {
+    height: 50%;
+    width: 80%;
+    float: right;
+    padding: none;
+    object-fit: cover;
+    z-index: -1;
+  }
