--- a/code/beehive-dashboard/src/Styles/Pages/SignUp.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/SignUp.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 .split {
   height: 100%;
   width: 50%;
@@ -49,4 +51,76 @@
 .centered img {
   width: 100%;
   height: 100%;
+}
+
+.signup-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.signup-form img{
+  width: 60%;
+  height: auto;
+}
+
+.signup-form h3 {
+  color: #000000;
+  font-size: 23px;
+  font-weight: 600;
+  font-family: 'Raleway', sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.256);
+}
+
+.inputs {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.input{
+  display: flex;
+  align-items: center;
+  margin: auto;
+  width: 300px;
+  height: 40px;
+  background: #ffffff;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.351);
+  border-radius: 50px;
+}
+
+.input img{
+  width: 20px;
+  height: 20px;
+  margin: 0px 30px;
+}
+
+.input input{
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 16px;
+  color: #000000;
+  font-family: 'Raleway', sans-serif;
+}
+
+.signup-button {
+  margin-top: 20px;
+}
+
+.signup-button button {
+  background-color: #253F65;
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px 50px;
+  border: none;
+  border-radius: 24px;
+  cursor: pointer;
+  box-shadow: 0px 6px 23px -6px #253f6575;
 }
