Update SignIn with authentication

--- a/code/beehive-dashboard/src/Styles/Components/Navbar.scss
+++ b/code/beehive-dashboard/src/Styles/Components/Navbar.scss
@@ -30,17 +30,17 @@
   text-decoration: none;
 }
 
-.nav-signup {
+.nav-signin {
   border-radius: 50px;
   padding: 10px 30px;
   background: #fff;
   transition: background 0.3s ease;
 }
 
-.nav-signup a{
+.nav-signin a{
   color: black;
 }
 
-.nav-signup:hover {
+.nav-signin:hover {
   background: #d9d9d9;
 }
