--- a/code/beehive-dashboard/src/Styles/Components/NavbarBlack.scss
+++ b/code/beehive-dashboard/src/Styles/Components/NavbarBlack.scss
@@ -30,17 +30,17 @@
   text-decoration: none;
 }
 
-.navb-signup {
+.navb-signout {
   border-radius: 50px;
   padding: 10px 30px;
   background: #000000;
   transition: background 0.3s ease;
 }
 
-.navb-signup a{
+.navb-signout a{
   color: rgb(255, 255, 255);
 }
 
-.navb-signup:hover {
+.navb-signout:hover {
   background: #4f4f4f;
 }
