--- a/code/beehive-dashboard/src/Styles/Pages/HiveDashboard.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/HiveDashboard.scss
@@ -3,7 +3,7 @@ body {
     padding: 0;
     background-color: #E8E3CD;
 }
-.dashboard-container {
+.hiveDashboard-container {
     position: relative;
 }
 
