--- a/code/beehive-dashboard/src/Styles/Pages/Landing.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Landing.scss
@@ -8,13 +8,13 @@
     position: relative;
   }
   
-  .navbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 0;
-  }
+  // .navbar {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   z-index: 0;
+  // }
   
   .banner-container {
     position: relative;
