Create add card component

--- a/code/beehive-dashboard/src/Styles/Pages/Dashboard.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Dashboard.scss
@@ -29,3 +29,10 @@ body {
     margin: 20px;
     box-sizing: border-box;
   }
+
+  .add-card {
+    height: 300px;
+    width: 300px;
+    margin: 20px;
+    box-sizing: border-box;
+  }
