--- a/code/beehive-dashboard/src/App.scss
+++ b/code/beehive-dashboard/src/App.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
+
 .App{
     text-align: center;
+}
+
+*{
+    font-family: 'Raleway', sans-serif;
+    font-variant-numeric: lining-nums;
 }
