--- a/code/beehive-dashboard/src/Styles/Pages/Dashboard.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Dashboard.scss
@@ -25,14 +25,14 @@ body {
 
   .beehive-card {
     height: 300px;
-    width: 20%;
+    width: 300px;
     margin: 20px;
     box-sizing: border-box;
   }
 
   .add-card {
     height: 300px;
-    width: 20%;
+    width: 300px;
     margin: 20px;
     box-sizing: border-box;
   }
