--- a/code/beehive-dashboard/src/App.scss
+++ b/code/beehive-dashboard/src/App.scss
@@ -8,3 +8,13 @@
     font-family: 'Raleway', sans-serif;
     font-variant-numeric: lining-nums;
 }
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+
+::-webkit-scrollbar {
+    width: 0px;
+    background-color: #F5F5F5;
+  }
