--- a/code/beehive-dashboard/src/Styles/Components/Table.scss
+++ b/code/beehive-dashboard/src/Styles/Components/Table.scss
@@ -3,7 +3,6 @@
     overflow-y: auto;
     border-radius: 1.8em;
     border-collapse: collapse;
-
     box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.2);
     font-size: 0.8em;
 
@@ -26,7 +25,7 @@
     }
 
     th {
-      text-align: left;
+      text-align: center;
       white-space: nowrap;
     }
 
