--- a/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
@@ -17,12 +17,12 @@
 
 .close_button {
   position: absolute;
-  top: 4px;
-  right: 4px;
-  background-color: rgb(235, 169, 169);
+  top: 3rem;
+  right: 3rem;
+  background-color: rgb(194, 71, 71);
   border-color: transparent;
-  height: 30px;
-  width: 30px;
+  height: 35px;
+  width: 35px;
   align-content: center;
   justify-content: center;
   border-radius: 50%;
@@ -31,25 +31,80 @@
   text-align: center;
   font-weight: bolder;
   cursor: pointer;
-  color: #4e4e4e;
+  box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.8);
+  color: #ffffff;
   &:hover {
-    color: #f00;
+    color:  rgb(174, 88, 88);
     background-color: rgb(247, 239, 239);
   }
 }
 
+.sync_button{
+  position: absolute;
+  top: 6rem;
+  right: 2rem;
+  background-color:darken($color: rgb(54, 54, 54), $amount: 10);
+  border-color: transparent;
+  color: #ffffff;
+  text-align: center;
+  font-weight: bolder;
+  cursor: pointer;
+  box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.8);
+  padding: 0.35rem 1rem;
+  width: 7rem;
+  border-radius: 1.5rem;
+
+  &:hover {
+    color: darken($color: rgb(54, 54, 54), $amount: 13);
+    background-color: rgb(244, 244, 244);
+  }
+}
+
+.export_button{
+  position: absolute;
+  top: 9rem;
+  right: 2rem;
+  background-color:darken($color: rgb(54, 54, 54), $amount: 10);
+  border-color: transparent;
+  color: #ffffff;
+  text-align: center;
+  font-weight: bolder;
+  cursor: pointer;
+  box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.8);
+  padding: 0.35rem 1rem;
+  width: 7rem;
+  border-radius: 1.5rem;
+
+  &:hover {
+    color: darken($color: rgb(54, 54, 54), $amount: 13);
+    background-color: rgb(244, 244, 244);
+  }
+}
+
 .table_container {
+  display: flex;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 999;
   border-radius: 1.75rem;
-  overflow:auto;
+  overflow: auto;
+  width: 100vw;
+  height: 100vh;
+  justify-items: center;
+  backdrop-filter: blur(2px);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
-.table_containe{
-    overflow-y: auto;
-    padding: 20px;
-    max-height: 85%;
+.table_background {
+  overflow-y: auto;
+  padding: 20px;
+  max-height: 90%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 1.7em;
+  border-color: transparent;
 }
