--- a/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
@@ -3,14 +3,37 @@
   width: 100%;
   gap: 1rem;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 
-  // .graph{
-  //     width: 20rem;
-  //     height: 10rem;
-  //     background-color: aliceblue;
-  //     padding: 0.5rem 0.5rem;
-  // }
+  .graph_card {
+    position: relative;
+    width: 15rem;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 1.75rem;
+    box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.2);
+    padding: 1rem 1rem;
+    margin: 2rem 0;
+    overflow: hidden;
+    
+    .graph {
+      position: relative;
+      width: 100%;
+      height: 30%;
+      // padding: 1rem 1rem;
+      // margin: 1rem 1rem;
+      overflow: hidden;
+    }
+
+    .graph_details{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: start;
+      margin-left: 1rem;
+    }
+  }
+
   // gap: 5rem;
   // margin: 5rem 5rem;
 }
@@ -34,16 +57,16 @@
   box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.8);
   color: #ffffff;
   &:hover {
-    color:  rgb(174, 88, 88);
+    color: rgb(174, 88, 88);
     background-color: rgb(247, 239, 239);
   }
 }
 
-.sync_button{
+.sync_button {
   position: absolute;
   top: 6rem;
   right: 2rem;
-  background-color:darken($color: rgb(54, 54, 54), $amount: 10);
+  background-color: darken($color: rgb(54, 54, 54), $amount: 10);
   border-color: transparent;
   color: #ffffff;
   text-align: center;
@@ -60,11 +83,11 @@
   }
 }
 
-.export_button{
+.export_button {
   position: absolute;
   top: 9rem;
   right: 2rem;
-  background-color:darken($color: rgb(54, 54, 54), $amount: 10);
+  background-color: darken($color: rgb(54, 54, 54), $amount: 10);
   border-color: transparent;
   color: #ffffff;
   text-align: center;
