--- a/code/beehive-dashboard/src/Styles/Pages/Dashboard.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Dashboard.scss
@@ -28,6 +28,10 @@ body {
     width: 300px;
     margin: 20px;
     box-sizing: border-box;
+    &:hover {
+      transform: translateY(-0.3rem);
+      transition: transform 0.3s ease;
+    }
   }
 
   .add-card {
@@ -35,4 +39,8 @@ body {
     width: 300px;
     margin: 20px;
     box-sizing: border-box;
+    &:hover {
+      transform: translateY(-0.5rem);
+      transition: transform 0.3s ease;
+    }
   }
