--- a/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
@@ -12,6 +12,7 @@
   background-color: rgb(241, 240, 238);
   border-radius: 1.75rem;
   box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
   overflow-y: auto;
   padding: 2rem;
 
@@ -50,6 +51,7 @@
     font-size: 1.2rem;
     font-weight: bold;
     color: #504f4f;
+    overflow: hidden;
   }
 
   .video_card {
@@ -90,16 +92,17 @@
 
       .video {
         width: 15rem;
-        height: 10rem;
+        height: 11rem;
         overflow: hidden;
-        background-color: #0f355e;
         border-radius: 1rem;
+        margin-top: 0.8rem;
       }
 
       .vl {
         margin: 0 2.8rem;
         border-left: 2px solid rgb(19, 42, 50);
         height: 11rem;
+        overflow: hidden;
       }
 
       .video_details {
@@ -108,12 +111,14 @@
         justify-content: space-evenly;
         align-items: start;
         margin-left: 1rem;
+        overflow: hidden;
 
         .value {
           font-size: 1.7rem;
           font-weight: bolder;
           margin-top: -1rem;
           margin-bottom: 0.5rem;
+          overflow: hidden;
         }
       }
     }
@@ -262,7 +267,7 @@
       position: absolute;
       top: 1rem;
       right: 1rem;
-
+      overflow: hidden;
       border-color: transparent;
       height: 30px;
       width: 30px;
@@ -287,6 +292,7 @@
 
     .graph_click {
       cursor: pointer;
+      overflow: hidden;
     }
 
     .sort {
@@ -333,11 +339,13 @@
   border-color: transparent;
   height: 35px;
   width: 35px;
+  display: flex;
+  flex-direction: row;
   align-content: center;
   justify-content: center;
   border-radius: 50%;
-  font-size: 20px;
-  padding-top: 2px;
+  font-size: 30px;
+  vertical-align: middle;
   text-align: center;
   font-weight: bolder;
   cursor: pointer;
@@ -346,6 +354,12 @@
   &:hover {
     color: rgb(174, 88, 88);
     background-color: rgb(247, 239, 239);
+  }
+
+  .svg{
+    text-align: center;
+    vertical-align: middle;
+    scale: 1.5;
   }
 }
 
@@ -356,13 +370,22 @@
   background-color: darken($color: rgb(54, 54, 54), $amount: 10);
   border-color: transparent;
   color: #ffffff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   text-align: center;
+  vertical-align: middle;
   font-weight: bolder;
   cursor: pointer;
   box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.8);
   padding: 0.35rem 1rem;
   width: 7rem;
   border-radius: 1.5rem;
+
+  .svg{
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
 
   &:hover {
     color: darken($color: rgb(54, 54, 54), $amount: 13);
@@ -377,6 +400,9 @@
   background-color: darken($color: rgb(54, 54, 54), $amount: 10);
   border-color: transparent;
   color: #ffffff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   text-align: center;
   font-weight: bolder;
   cursor: pointer;
