--- a/code/beehive-dashboard/src/Styles/Components/Carousel.scss
+++ b/code/beehive-dashboard/src/Styles/Components/Carousel.scss
@@ -1,6 +1,7 @@
 .carousel_container {
     max-width: 15rem;
-    max-height: 10rem;
+    max-height: 11rem;
     margin: 0 auto;
-    border-radius: 10px;
+    border-radius: 1rem;
+    overflow: hidden;
   }
