--- a/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
@@ -5,7 +5,7 @@
   transform: translate(-50%);
   display: flex;
   width: 90%;
-  height: 75%;
+  height: 83%;
   gap: 1rem;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -13,8 +13,17 @@
   border-radius: 1.75rem;
   box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  overflow-y: auto;
-  padding: 2rem;
+  
+  .graph_card_container{
+    padding: 3rem 2rem;
+    padding-top: 5rem;
+    height: 83%;
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    overflow-y: auto;
+  }
 
   @media screen and (min-width: 1600px) {
     .graph_card {
@@ -40,18 +49,18 @@
   }
 
   .topic {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    margin-bottom: 0.5rem;
-    margin-top: 0.5rem;
-    margin-left: 1rem;
+    position: absolute;
+    top: 0.75rem;
+    left: 1.8rem;
     font-size: 1.2rem;
     font-weight: bold;
     color: #504f4f;
     overflow: hidden;
+    padding: 0.5rem 1.2rem;
+    border-radius: 1.5rem;
+    background-color: rgba(241, 240, 238, 0.767);
+    backdrop-filter: blur(2px);
+    z-index: 99;
   }
 
   .video_card {
