battery Indicator Added

--- a/code/beehive-dashboard/src/Styles/Components/BeehiveCard.scss
+++ b/code/beehive-dashboard/src/Styles/Components/BeehiveCard.scss
@@ -55,3 +55,10 @@
 .card-features li .feature {
     font-weight: 600;
 }
+
+.card-features li .feature-battery {
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
+    margin-top: -1rem;
+    
+}
