--- a/code/beehive-dashboard/src/Styles/Pages/Dashboard.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Dashboard.scss
@@ -65,3 +65,10 @@ body {
     color: #000000;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.256);
   }
+  .loading-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
