--- a/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
+++ b/code/beehive-dashboard/src/Styles/Pages/Graphs.scss
@@ -13,8 +13,8 @@
   border-radius: 1.75rem;
   box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  
-  .graph_card_container{
+
+  .graph_card_container {
     padding: 3rem 2rem;
     padding-top: 5rem;
     height: 83%;
@@ -98,7 +98,6 @@
       flex-wrap: wrap;
       font-weight: normal;
       padding: 0 0.8rem;
-      
 
       .video {
         width: 15rem;
@@ -109,21 +108,20 @@
       }
 
       .vl {
-        margin: 0 2.0rem;
+        margin: 0 2rem;
         border-left: 2px solid rgb(19, 42, 50);
         height: 11rem;
         overflow: hidden;
       }
 
       .video_details {
-        
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: start;
-        
+
         overflow: hidden;
-        margin-top :1.7rem;
+        margin-top: 1.7rem;
 
         .value {
           font-size: 1.4rem;
@@ -368,7 +366,7 @@
     background-color: rgb(247, 239, 239);
   }
 
-  .svg{
+  .svg {
     text-align: center;
     vertical-align: middle;
     scale: 1.5;
@@ -394,7 +392,7 @@
   width: 7rem;
   border-radius: 1.5rem;
 
-  .svg{
+  .svg {
     margin-top: 1em;
     margin-bottom: 1em;
   }
@@ -406,9 +404,9 @@
 }
 
 .export_button {
-  position: absolute;
-  top: 9rem;
-  right: 2rem;
+  margin-top: 2rem;
+  margin-bottom: -2rem;
+  margin-left: 60rem;
   background-color: darken($color: rgb(54, 54, 54), $amount: 10);
   border-color: transparent;
   color: #ffffff;
@@ -483,4 +481,36 @@
   transform: translate(-50%, -50%);
   border-radius: 1.7em;
   border-color: transparent;
+}
+
+.graph_header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+
+.back-button {
+  margin-top: 2rem;
+  margin-bottom: -2rem;
+  margin-left: 3rem;
+  background-color: darken($color: rgb(5, 197, 91), $amount: 10);
+  border-color: transparent;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  font-weight: bolder;
+  cursor: pointer;
+  box-shadow: 0px 6px 23px -6px rgba(0, 58, 13, 0.8);
+  padding: 0.35rem 1rem;
+  width: 7rem;
+  border-radius: 1.5rem;
+
+  &:hover {
+    color: darken($color: rgb(54, 54, 54), $amount: 13);
+    background-color: rgb(244, 244, 244);
+  }
 }
