--- a/code/beehive-dashboard/src/Styles/Components/NavbarBlack.scss
+++ b/code/beehive-dashboard/src/Styles/Components/NavbarBlack.scss
@@ -42,7 +42,11 @@
   }
 }
     
- 
+.navb-notification {
+  cursor: pointer;
+  color: rgb(0, 0, 0);
+  list-style: none;
+}
 
 .navb-signout {
   border-radius: 50px;
